--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     backdrop-filter: blur(5px);
-    color: #fff;
+    color: white;
 }
 
 .header {
@@ -17,3 +17,20 @@ body {
 .header h1 {
     font-size: 25vmin;
 }
+
+.header hr {
+    width: 75vmin;
+    float: right;
+}
+
+#subtitle {
+    font-size: 8vmin;
+}
+
+#line {
+    display: block;
+    width: 75vmin;
+    margin-left: auto;
+    margin-right: 0;
+    border-top: 1px solid white;
+ }
