--- a/style.css
+++ b/style.css
@@ -6,19 +6,67 @@ body {
     color: white;
 }
 
-.header {
+#sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    background-color: black;
+    overflow-x: hidden;
+    padding-top: 5vh;
+    text-align: right;
+    transition: 0.3s;
+}
+
+#sidebar a {
+    padding-right: 2vw;
+    padding-bottom: 2vh;
+    padding-top: 2vh;
+    text-decoration: none;
+    font-size: 5vmin;
+    color: #dad9d4;
+    display: block;
+    transition: 0.3s;
+}
+
+#sidebar a:hover, #openbtn:hover {
+    color: white;
+}
+
+#closebtn {
+    font-size: 10vmin;
+    padding-bottom: 4vh;
+}
+
+#openbtn {
+    font-size: 8vmin;
+    text-decoration: none;
+    color: #dad9d4;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-left: 5vw;
+    padding-top: 5vh;
+    z-index: 1;
+}
+
+#header {
     text-align: right;
     padding-right: 5vw;
     padding-top: 5vh;
-    width: 100vw;
+    margin-left: auto;
+    margin-right: 0;
+    width: 95vw;
     height: 100vh;
 }
 
-.header h1 {
+#header h1 {
     font-size: 25vmin;
 }
 
-.header hr {
+#header hr {
     width: 75vmin;
     float: right;
 }
